--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -7,18 +7,32 @@
     android:orientation="vertical"
     tools:context="ua.i4igo.tracker.TrackerActivity">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        tools:context="ua.i4igo.tracker.TrackerActivity">
-    </fragment>
+        android:layout_height="match_parent">
 
-    <TextView
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="ua.i4igo.tracker.TrackerActivity"></fragment>
+
+        <Button
+            android:id="@+id/bStatusGPS"
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:text="GPS"
+            android:background="@android:color/transparent"/>
+
+    </FrameLayout>
+
+    <!--<TextView
         android:id="@+id/tvBuilder"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 
 </LinearLayout>
